# miacag

./: .gitignore  Dockerfile  MANIFEST.in  get_pretrained.sh  requirements.txt  setup.cfg  setup.py  split_train_val.py  stringio.py  tester.py  trainer.py
configs/: config.py  options.py
configs/dominance/: dominance_classifier.yaml
configs/lca_rca/: classification_config_angio.yaml
data/angio/: train.csv  (+1 more)
dataloader/: dataloader_base.py  dataloader_base_monai.py  dataloader_base_video.py  dataloader_monai_classification_3D.py  dataloader_monai_segmentation_3D.py  get_dataloader.py  get_dataloader_classification.py
metrics/: metrics.py  metrics_utils.py
mia/: tester.py
miacag/: predictor.py  tester.py  trainer.py
model_utils/: eval_utils.py  get_loss_func.py  get_model.py  get_optimizer.py  get_test_pipeline.py  grad_cam_utils.py  train_utils.py
models/: BuildModel.py  blocks_3D.py  get_encoder.py  mlps.py  modules.py  r2plus1.py  simple_3d_model.py
plots/: angle_plotter.py  angle_plotter.r  plotter.py  plotter.r
postprocessing/: append_results.py
preprocessing/: copy_table.py  datasetFingerpring.py  datasetFingerprint.py  pre_process.py  split_train_val.py  transform_missing_floats.py  transform_stenosis.py
scripts/: copy_table.py
temp_scripts/: Task037_038_Chaos_Challenge.py  convert_CHAOS.py  convert_brats_json.py  convert_brats_json_4d.py  convert_cifar10.py  convert_kinetics_tiny.py  convert_road.py  convert_ucf.py  create_brats_csv.py  load_imbd.py  nnUNet_plan_and_preprocess.py  optical_flow.py  test_5d.py
tests/: test_sql_utils.py
(+527 files in other folders)
