[metadata]
name = mia
version = 0.0.1
author = Christian Eschen
author_email = christian_eschen@hotmail.com
description = mia angio DL tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChristianEschen/mia
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False